--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "start-front-end": "react-scripts start",
     "start-backend": "nodemon src/backend/app.js",
-    "start-all": "npm-run-all -p start start-backend"
+    "start-dev": "npm-run-all -p start-frontend start-backend"
   },
   "eslintConfig": {
     "extends": "react-app"
