--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "npm-run-all -s build start-backend",
+    "start": "cross-env NODE_ENV=production npm-run-all -s build start-backend",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-frontend": "react-scripts start",
     "start-backend": "nodemon src/backend/app.js",
+    "start-db-backend" : "npm-run-all -p start-db start-backend",
     "start-db": "mongod",
     "start-dev": "npm-run-all -p start-db start-backend start-frontend"
   },
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "npm-run-all": "^4.1.5"
   },
   "proxy": "http://localhost:3001"
