--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "cross-env": "^5.2.0",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production npm-run-all -s build start-backend",
@@ -39,10 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^5.2.0",
-    "npm-run-all": "^4.1.5"
   },
   "proxy": "http://localhost:3001"
 }
