--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "cross-env": "^5.2.0",
-    "npm-run-all": "^4.1.5"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production npm-run-all -s build start-backend",
